<resources>
    <string name="app_name">RegisterForm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_title">Registro</string>
    <string name="label_name">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_contraseña">Contraseña</string>
    <string name="label_correo">Correo</string>
    <string name="label_register">Registrar</string>

    <string name="error_empty_field">El campo no puede estar vacío</string>
    <string name="error_invalid_email">Introduce un correo electrónico válido</string>
    <string name="error_password_length">Introduce una contraseña válida</string>
    <string name="label_gender">Genero</string>

</resources>