<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/label_title"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_name"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@null"
        android:inputType="textPersonName"
        android:textColor="#000000" />


    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_apellido"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@null"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_correo"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@null"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_contraseña"
        android:textColor="#000000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="14dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:hint="@null"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/ivHidden"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            app:srcCompat="@drawable/hidden" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_gender"
        android:textColor="#000000"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/rbgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hombre" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mujer" />

        <RadioButton
            android:id="@+id/rbNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Prefiero no decir" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="Acepto Términos y Condiciones" />

    <Button
        android:id="@+id/bnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:enabled="false"
        android:onClick="runValidations"
        android:text="@string/label_register" />

</LinearLayout>